# quickscribe

./: .gitignore  CLAUDE.md  README.md  audio_setup.py  pyproject.toml  quickscribe.py  quickscribe_cli.py  quickscribe_core.py  quickscribe_old.py  quickscribe_tui.py  requirements.txt  run.sh  run_quickscribe.py  ui_plan.md
src/quickscribe/: __init__.py  main.py
src/quickscribe/core/: __init__.py  devices.py  models.py  recorder.py  transcriber.py
src/quickscribe/interfaces/: __init__.py  cli.py  tui.py
src/quickscribe/utils/: __init__.py
